5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_2425.log
== TEST (2019-03-26 10:19:36) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustível gasto: "))
total=(dT/cT)
print(total, km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total, km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:19:49) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustivel gasto: "))
total=(dT/cT)
print(total, km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total, km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:20:54) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustivel gasto: "))
total=(dT/cT)
print(round(total, 3)(km/l)
-- ERROR:
File "XXXX", line 5
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:20:59) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustivel gasto: "))
total=(dT/cT)
print(round(total, 3)(km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total, 3)(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:01) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustivel gasto: "))
total=(dT/cT)
print(round(total, 3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:22:13) 
-- CODE:
dT=float(input("distancia total: "))
cT=float(input("combustivel gasto: "))
total=(dT/cT)
print(round(total, 3),"km/l")

-- EXECUTION TIME:
0.118818
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
